Fixed background jobs for reports
